code/python/FactSetESG/v3/docs/SfdrPai.md
# SfdrPai

SFDR PAI Indicators Response Object

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**fsym_id** | **str, none_type** | FactSet Entity Identifier. Six alpha-numeric characters, excluding vowels, with a -E suffix (XXXXXX-E). | [optional] 
**request_id** | **str** | Identifier that was used for the request. | [optional] 
**sub_topic_code** | **str, none_type** | Codes for the General, Mandatory and Additional PAI indicators | [optional] 
**sub_topic_name** | **str, none_type** | Names for the General, Mandatory and Additional PAI indicators | [optional] 
**indicator_type** | **str, none_type** | The type of indicator - General, Additional &amp; Mandatory | [optional] 
**period_end_date** | **date, none_type** | The Reporting period end date expressed in YYYY-MM-DD format | [optional] 
**reporting_period** | **str, none_type** | The reporting period of the company expressed in YYYY format | [optional] 
**standardized_unit** | **str, none_type** | The units of measurements for the indicators | [optional] 
**standardized_value** | **str, none_type** | The PAI calculations based on the company-reported data, some metrics sourced from Factset Databases and Truvalue SASB Spotlights | [optional] 
**currency** | **str, none_type** | Currency code for the data. For a list of currency ISO codes, visit [Online Assistant Page #1470](https://oa.apps.factset.com/pages/1470). | [optional] 
**error** | [**InvalidIdErrorObject**](InvalidIdErrorObject.md) |  | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


